# ljbg

./: .clang-format  LICENSE  README.md  argument_parser.c  argument_parser.h  ljbg.c  meson.build
src/: argument_parser.c  argument_parser.h  bindings_generator.c  bindings_generator.h  ljbg.c  meson.build
test/: enum.h  enum_expected.lua  function.h  function_expected.lua  meson.build  struct.h  struct.h.gch  struct_expected.lua  struct_test.c  struct_test.cc  test_runner.sh  union.h  union_expected.lua  unit_tests.c
